--- a/araudio.html
+++ b/araudio.html
@@ -13,7 +13,7 @@
       margin: 0;
       overflow: hidden;
       font-family: sans-serif;
-      background: #000;
+      background: #000; /* So if video is not showing, background is black. */
     }
     /* The video and overlayCanvas overlap */
     #video, #overlayCanvas {
@@ -68,6 +68,8 @@
   <canvas id="scanCanvas"></canvas>
 
   <script>
+    console.log("Script start...");
+
     /************************************************************************
      * 1) Lookup: up to 20 QR codes => images + associated audio
      ************************************************************************/
@@ -84,6 +86,7 @@
     const codeToAudio = {
       "01": "https://www.9mtx.com/ar_demo/uesugi_kenshin.wav",
       "02": "https://www.9mtx.com/ar_demo/voice2.mp3",
+      // FIXED: use a valid audio file for "03"
       "03": "https://www.9mtx.com/ar_demo/voice3.mp3",
       "04": "https://www.9mtx.com/ar_demo/voice4.mp3",
       "05": "https://www.9mtx.com/ar_demo/voice5.mp3",
@@ -105,14 +108,14 @@
     /************************************************************************
      * 3) State Variables
      ************************************************************************/
-    let audioEnabled = false;     // Becomes true after user taps "Enable Audio"
+    let audioEnabled = false;     // True after user taps "Enable Audio"
     let replayFlag = false;       // True if audio is currently playing
-    let firstCodeDetected = false;  // We'll show the "Enable Audio" button only after the first code is detected
+    let firstCodeDetected = false;// Show "Enable Audio" only after first code detection
     let lastScanTime = 0;         // For 1-second scanning intervals
     let currentCodeData = null;   // Holds the last-detected QR code text
     let currentCodeCorners = null;// Holds the location corners of the last-detected QR code
 
-    const qrAudio = new Audio();  // We'll set .src from codeToAudio once we detect a code
+    const qrAudio = new Audio();   // We'll set .src from codeToAudio once we detect a code
     const overlayImg = new Image(); // We'll set .src from codeToImage once we detect a code
 
     /************************************************************************
@@ -120,7 +123,7 @@
      ************************************************************************/
     qrAudio.addEventListener("ended", () => {
       replayFlag = false;
-      // Once audio finishes, scanning can trigger a new audio if a code is detected
+      console.log("Audio ended. Setting replayFlag = false.");
       info.textContent = "Scanning for QR Code...";
     });
 
@@ -130,9 +133,8 @@
     enableAudioBtn.addEventListener("click", () => {
       audioEnabled = true;
       enableAudioBtn.style.display = "none";
+      console.log("Audio enabled by user.");
 
-      // If a code is already detected and we're not in the middle of playing audio,
-      // play it immediately
       if (currentCodeData && !replayFlag) {
         startAudioForCurrentCode();
       }
@@ -141,6 +143,7 @@
     /************************************************************************
      * 6) Request the Camera
      ************************************************************************/
+    console.log("Requesting camera access...");
     const constraints = {
       video: {
         facingMode: "environment",
@@ -151,12 +154,13 @@
 
     navigator.mediaDevices.getUserMedia(constraints)
       .then(stream => {
+        console.log("Camera stream acquired.");
         video.srcObject = stream;
         video.play();
         requestAnimationFrame(tick);
       })
       .catch(err => {
-        console.error("Camera access denied:", err);
+        console.error("Camera access denied or failed:", err);
         info.textContent = "Error accessing camera: " + err;
       });
 
@@ -164,16 +168,17 @@
      * 7) The Main Loop => scanning & drawing
      ************************************************************************/
     function tick(timestamp) {
-      // Draw live video feed
+      // If no camera feed, skip
       if (video.readyState === video.HAVE_ENOUGH_DATA) {
         overlayCanvas.width = video.videoWidth;
         overlayCanvas.height = video.videoHeight;
         overlayCtx.drawImage(video, 0, 0, overlayCanvas.width, overlayCanvas.height);
       }
 
-      // We'll do scanning once every 1 second => so we don't spam decode
+      // We'll do scanning once every 1 second
       if (timestamp - lastScanTime >= 1000) {
-        lastScanTime = timestamp;  // record the time
+        lastScanTime = timestamp;
+        console.log("Scanning for QR code...");
 
         if (video.readyState === video.HAVE_ENOUGH_DATA) {
           scanCanvas.width = video.videoWidth;
@@ -187,25 +192,22 @@
           });
 
           if (code) {
-            // Found a code => store data + corners
+            console.log("QR Code detected:", code.data);
             currentCodeData = code.data;
             currentCodeCorners = code.location;
 
-            // If this is the first time we've seen *any* code:
             if (!firstCodeDetected) {
               firstCodeDetected = true;
-              // Show "Enable Audio" button once
               enableAudioBtn.style.display = "block";
             }
 
             // Update the overlay image, if any
             overlayImg.src = codeToImage[currentCodeData] || "";
 
-            // If audio is enabled, and we're not already playing audio, start it
+            // If audio is enabled and we're not playing yet, play now
             if (audioEnabled && !replayFlag) {
               startAudioForCurrentCode();
             }
-
           } else {
             // No code found in this scan
             currentCodeData = null;
@@ -214,7 +216,7 @@
         }
       }
 
-      // Even while audio plays, we keep drawing the overlay at each frame (if code is present)
+      // Draw the overlay at each frame (if code is present)
       if (currentCodeData && currentCodeCorners) {
         drawOverlayImage(currentCodeCorners, overlayImg);
       }
@@ -227,32 +229,28 @@
      ************************************************************************/
     function startAudioForCurrentCode() {
       const code = currentCodeData;
-      if (!code) return;  // no code => nothing to play
+      if (!code) return;
 
       if (codeToAudio[code]) {
+        console.log("Starting audio for code:", code);
         qrAudio.src = codeToAudio[code];
-        // Mark that audio is playing => won't restart until ended
         replayFlag = true;
         qrAudio.currentTime = 0;
         qrAudio.play().catch(err => {
           console.warn("Audio playback blocked or failed:", err);
-          // If it fails, we reset the flag so we can try again
           replayFlag = false;
         });
       } else {
-        // No audio defined => do nothing special
         console.log("No audio assigned for code:", code);
       }
     }
 
     /************************************************************************
-     * 9) Draw the 2D image over the QR code bounding box
-     *    (No red lines => we do NOT draw corners or outlines)
+     * 9) Draw the 2D image over the QR code bounding box (double size)
      ************************************************************************/
     function drawOverlayImage(location, img) {
       if (!img || !img.src) return;  // no valid image
 
-      // Extract corners
       const { topLeftCorner, topRightCorner, bottomRightCorner, bottomLeftCorner } = location;
 
       // Compute bounding box
@@ -264,9 +262,33 @@
       const w = maxX - minX;
       const h = maxY - minY;
 
-      // Draw the image in that bounding box
-      overlayCtx.drawImage(img, minX, minY, w, h);
+      // Center
+      const centerX = (minX + maxX) / 2;
+      const centerY = (minY + maxY) / 2;
+
+      // Double size
+      let newW = 4 * w;
+      let newH = 4 * h;
+
+      // Re-center
+      let newX = centerX - newW / 4;
+      let newY = centerY - newH / 4;
+
+      // Clamp to canvas
+      if (newX < 0) newX = 0;
+      if (newY < 0) newY = 0;
+      if (newX + newW > overlayCanvas.width) {
+        newW = overlayCanvas.width - newX;
+      }
+      if (newY + newH > overlayCanvas.height) {
+        newH = overlayCanvas.height - newY;
+      }
+
+      // Draw
+      overlayCtx.drawImage(img, newX, newY, newW, newH);
     }
+
+    console.log("Script end...");
   </script>
 </body>
 </html>
