start screen update

--- a/ardemo.html
+++ b/ardemo.html
@@ -27,6 +27,6 @@
 <body>
     <h1>AR Demo</h1>
     <p>このページでは、拡張現実（AR）のデモを体験できます。「AR」ボタンをクリックして、ARデモページに移動してください。</p>
-    <button onclick="window.location.href='https://www.9mtx.com/ar_demo/araudio.html'">AR</button>
+    <button onclick="window.location.href='https://www.9mtx.com/ar_demo/ardemo2.html'">AR</button>
 </body>
 </html>
